--- a/dashboard/src/css/CustomerMessage.css
+++ b/dashboard/src/css/CustomerMessage.css
@@ -226,6 +226,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: left;
 }
 
 .customer-messages__conversation-time {
@@ -255,6 +256,7 @@
   color: #313131;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
+  text-align: left;
 }
 
 .customer-messages__last-message {
@@ -265,6 +267,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: left;
 }
 
 .customer-messages__no-conversations {
@@ -416,6 +419,7 @@
   font-weight: 600;
   color: #1f2937;
   font-family: 'Poppins', sans-serif;
+  text-align: left;
 }
 
 .customer-messages__chat-type {
@@ -424,6 +428,7 @@
   color: #313131;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
+  text-align: left;
 }
 
 /* Chat Messages */
